Move both publish orb steps to the bash script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
       - circle-compare-url/reconstruct
       - run:
           name: Publish dev releases of any modified orbs
-          command: .scripts/publish_orbs.sh
+          command: .scripts/publish_orbs.sh dev_release
 
   dev-promote-patch:
     executor: cli
@@ -56,24 +56,4 @@ jobs:
       - circle-compare-url/reconstruct
       - run:
           name: Publish any modified orbs
-          shell: /bin/bash -exo pipefail
-          command: |
-            # save value stored in file to a local env var
-            CIRCLE_COMPARE_URL=$(cat CIRCLE_COMPARE_URL.txt)
-
-            COMMIT_RANGE=$(echo $CIRCLE_COMPARE_URL | sed 's:^.*/compare/::g')
-
-            echo "Commit range: $COMMIT_RANGE"
-
-            for ORB in src/*/; do
-              orbname=$(basename $ORB)
-              if [[ $(git diff $COMMIT_RANGE --name-status | grep "$orbname") ]]; then
-
-                echo "promoting circleci/${orbname}@dev:${CIRCLE_BRANCH}-${CIRCLE_SHA1} as patch release"
-
-                circleci orb publish promote circleci/${orbname}@dev:${CIRCLE_BRANCH}-${CIRCLE_SHA1} patch --token $CIRCLECI_API_TOKEN
-              else
-                echo "${orbname} not modified; no need to promote"
-              fi
-              echo "------------------------------------------------------"
-            done
+          command: scripts/publish.sh patch_release
